[package]
name = "rotator"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"
license = "Apache-2.0 or MIT"

[dependencies]
lambda_runtime = "0.2.1"
lambda_runtime_errors = "0.1.1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
env_logger = "0.7.1"
log = "0.4.8"
failure = "0.1.6"
rusoto_core = "0.42.0"
lazy_static = "1.4.0"
rusoto_secretsmanager = "0.42.0"
rusoto_iam = "0.42.0"
